nav and head without respponsive

--- a/index.html
+++ b/index.html
@@ -4,16 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B13-A02</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    <nav>
-        <h3>TechWave</h3>
-        <div>
-            <p>About</p>
-            <p>Episodes</p>
-            <p>Host</p>
+<body class="inter">
+    <nav >
+        <div class="navbar">
+            <h3>Tech<span>Wave</span></h3>
+            <div class="navbar-menu">
+                <a href="">About</a>
+                <a href="">Episodes</a>
+                <a href="">Host</a>
+            </div>
+            <button class="button">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
         </div>
-        <button>Subscribe</button>
     </nav>
+    <header>
+        <div class="container">
+            <img src="./assets/hero-bg.png" class="hero-bg">
+            <img src="./assets/hero-circle.png" class="hero-circle">
+            <img src="./assets/microphone.png" class="microphone">
+            <button class="new">New</button>
+            <div class="header-content">
+                <h2 >TechWave</h2>
+                <p >Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <div >
+
+                    <button class="button Spotify"><img src="./assets/spotify.png" alt="">Listen on Spotify</button>
+                    <button  class=" Subscribe Spotify"> <img src="./assets/message.png" alt="">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
