nav and head -mobile responsive

--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 <body class="inter">
     <nav >
         <div class="navbar">
-            <h3>Tech<span>Wave</span></h3>
+            <h3 class="h3">Tech<span>Wave</span></h3>
             <div class="navbar-menu">
                 <a href="">About</a>
                 <a href="">Episodes</a>
                 <a href="">Host</a>
             </div>
-            <button class="button">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="button button-1">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
+            <div class="hamburger">
+                <img src="./assets/hamburger-menu.png" alt="">
+            </div>
         </div>
+        
     </nav>
     <header>
         <div class="container">
