--- a/index.html
+++ b/index.html
@@ -43,5 +43,31 @@
             </div>
         </div>
     </header>
+    <section class="section-1-container">
+        <div class="section-1">
+            <h3>About the Podcast</h3>
+            <p class="p1">TechWave is your go-to podcast for staying ahead in the fast-paced world of <br>
+            We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>and share stories of personal growth from industry leaders.</p>
+            <p class="p2">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+            <hr>
+            <div class="card">
+                <div class="cards">
+                    <h2>150K+</h2>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="cards">
+                    <h2>200+</h2>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="cards">
+                    <h2>4.9★</h2>
+                    <p>Average Rating</p>
+                </div>
+                <div class="cards">
+                    <h2>50+</h2>
+                    <p>Industry Experts</p>
+                </div>            
+            </div>
+    </section>
 </body>
 </html>
