--- a/index.html
+++ b/index.html
@@ -101,6 +101,45 @@
             </div>
         </section>
     </section>
+    <section class="section-3-container">
+        <div class="section-3">
+            <h2>Featured Episodes</h2>
+            <div class="episodes-cards">
+                <div class="episode-card">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ji7NxxG63kA?si=GNyb16U-5Rebg-ZN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <h3>The Future of AI in Everyday Life</h3>
+                    <p class="ppp">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                    <div class="clock">
+                        <img src="./assets/clock.png" alt="">
+                        <p>50 sec</p>
+                    </div>
+                </div>
+                <div class="episode-card">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wyglL4VJBIQ?si=A2Mjz7hWGasjSCs7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <h3>Building Better Habits for<br>Remote Work</h3>
+                    <p class="ppp">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                    <div class="clock">
+                        <img src="./assets/clock.png" alt="">
+                        <p>28 sec</p>
+                    </div>
+                </div>
+                <div class="episode-card">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/v3tc-F3q_pw?si=bffj_VVnFOLM33bp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <h3>Career Growth in Tech: A Roadmap</h3>
+                    <p class="ppp">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                    <div class="clock">
+                        <img src="./assets/clock.png" alt="">
+                        <p>49 sec</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    
     
 </body>
 </html>
