--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
                 </div>
                 <div class="choose-card card-4">
-                    <img src="./assets/device.png" alt="">
+                    <img src="./assets/zap-fast.png" alt="">
                     <h3>Exclusive Interviews</h3>
                     <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
                 </div>
@@ -136,6 +136,25 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </section>
+    <section class="section-4-container">
+        <div class="section-4">
+            <h2>Meet the Host</h2>
+            <div class="host-details">
+                <img src="./assets/host.png" alt="">
+                <div class="host-content">
+                    <h3>Alex Kumar</h3>
+                    <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="host-icon">
+                        <img src="./assets/linkedin.png" alt="">
+                        <img src="./assets/x.png" alt="">
+                        <img src="./assets/instagram.png" alt="">
+                        <img src="./assets/youtube.png" alt="">
+
+                    </div>
+                </div>
             </div>
         </div>
     </section>
