--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                     <h3>Alex Kumar</h3>
                     <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
                     <div class="host-icon">
-                        <img src="./assets/linkedin.png" alt="">
-                        <img src="./assets/x.png" alt="">
-                        <img src="./assets/instagram.png" alt="">
-                        <img src="./assets/youtube.png" alt="">
+                        <a href=""><img src="./assets/linkedin.png" alt=""></a>
+                        <a href=""><img src="./assets/x.png" alt=""></a>
+                        <a href=""><img src="./assets/instagram.png" alt=""></a>
+                        <a href=""><img src="./assets/youtube.png" alt=""></a>
 
                     </div>
                 </div>
@@ -165,19 +165,19 @@
                 <h3>Tech<span>Wave</span></h3>
                 <div class="footer-icon">
                     <div class="icon-flex">
-                         <img src="./assets/spotify.png" alt="">
+                        <a href=""><img src="./assets/spotify.png" alt=""></a>
                         <p>Spotify</p>
                     </div>
                     <div class="icon-flex">
-                        <img src="./assets/apple-podcast.png" alt="">
+                        <a href=""><img src="./assets/apple-podcast.png" alt=""></a>
                         <p>Apple Podcasts</p>
                     </div>
                     <div class="icon-flex">
-                        <img src="./assets/youtube-podcast.png" alt="">
+                        <a href=""><img src="./assets/youtube-podcast.png" alt=""></a>
                         <p>YouTube</p>
                     </div>
                     <div class="icon-flex">
-                        <img src="./assets/twitter.png" alt="">
+                        <a href=""><img src="./assets/twitter.png" alt=""></a>
                         <p>Twitter</p>
                     </div>
                 </div>
